[package]
name = "glow-core"
version = "0.1.0"
authors = ["aes <andres@elevenyellow.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = "0.2"
cw0 = "0.2"
terraswap = "1.2.0"
moneymarket = "0.1.0"
glow-protocol = { version = "0.1.0", path = "../../packages/glow_protocol" }
cosmwasm-std = { version = "0.10.1", features = ["iterator"] }
cosmwasm-storage = { version = "0.10.1", features = ["iterator"] }
cosmwasm-bignumber = "1.0"
schemars = "0.7"
sha3 = "0.9.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
terra-cosmwasm = "1.2.3"

[dev-dependencies]
cosmwasm-schema = { version = "0.10.1" }


[profile.dev]
overflow-checks = true
