[package]
name = "glow-core"
version = "0.2.0"
authors = ["aes <andres@elevenyellow.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = "0.8.0-rc2"
cw0 = "0.8.0"
terraswap = "2.4.0"
moneymarket = { git = "https://github.com/Anchor-Protocol/money-market-contracts", rev = "92d5a5b1a247693ffb63197a1a890d86b6c820db"}
glow-protocol = { version = "0.2.0-rc2", path = "../../packages/glow_protocol" }
cosmwasm-std = { version = "0.16.0", features = ["iterator"] }
cosmwasm-storage = { version = "0.16.0", features = ["iterator"] }
cosmwasm-bignumber = "2.2.0"
schemars = "0.8.1"
sha3 = "0.9.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
terra-cosmwasm = "2.2.0"
thiserror = { version = "1.0.20" }


[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }


[profile.dev]
overflow-checks = true
