[package]
name = "glow-vesting"
version = "1.1.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw20 = "0.8.0"
cosmwasm-std = "0.16.0"
cosmwasm-storage = "0.16.0"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
glow-protocol = { version = "0.2.0", path = "../../packages/glow_protocol" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0", default-features = false  }
